--- a/contrib/debian/manpages/syndicated.1
+++ b/contrib/debian/manpages/syndicated.1
@@ -1,14 +1,14 @@
-.TH PIVD "1" "February 2017" "syndicated 2.1.4.1"
+.TH SYNXD "1" "February 2017" "syndicated 2.1.4.1"
 .SH NAME
-PIVX \- peer-to-peer network based digital currency
+Syndicate \- peer-to-peer network based digital currency
 .SH SYNOPSIS
 syndicated [options] <command> [params]
 .TP
 syndicated [options] help <command> \- Get help for a command
 .SH DESCRIPTION
-This  manual page documents the syndicated program. PIVX is a peer-to-peer digital currency. Peer-to-peer (P2P) means that there is no central authority to issue new money or keep track of transactions. Instead, these tasks are managed collectively by the nodes of the network. Advantages:
+This  manual page documents the syndicated program. Syndicate is a peer-to-peer digital currency. Peer-to-peer (P2P) means that there is no central authority to issue new money or keep track of transactions. Instead, these tasks are managed collectively by the nodes of the network. Advantages:
 
-PIVX can be sent easily through the Internet, without having to trust middlemen. Transactions are designed to be irreversible. Be safe from instability caused by fractional reserve banking and central banks. The limited inflation of the PIVX system’s money supply is distributed evenly (by CPU power) throughout the network, not monopolized by banks.
+Syndicate can be sent easily through the Internet, without having to trust middlemen. Transactions are designed to be irreversible. Be safe from instability caused by fractional reserve banking and central banks. The limited inflation of the Syndicate system’s money supply is distributed evenly (by CPU power) throughout the network, not monopolized by banks.
 
 .SH OPTIONS
 .TP
@@ -98,7 +98,7 @@ Returns the number of connections to other nodes.
 Returns the proof-of-work difficulty as a multiple of the minimum difficulty.
 .TP
 \fBgetgenerate\fR
-Returns boolean true if server is trying to generate PIV, false otherwise.
+Returns boolean true if server is trying to generate SYNX, false otherwise.
 .TP
 \fBsetgenerate 'generate' ['genproclimit']\fR
 Generation is limited to ['genproclimit'] processors, \-1 is unlimited.
@@ -169,7 +169,7 @@ Returns a list of the last ['count'] transactions for 'account' \- for all accou
 Moves funds between accounts.
 .TP
 \fBsendfrom* <'account'> <'syndicateaddress'> <'amount'> ['minconf=1'] ['comment'] ['comment-to']\fR
-Sends amount from account's balance to 'syndicateaddress'. This method will fail if there is less than amount PIV with ['minconf'] confirmations in the account's balance (unless account is the empty-string-named default account; it behaves like the *sendtoaddress* method). Returns transaction ID on success.
+Sends amount from account's balance to 'syndicateaddress'. This method will fail if there is less than amount SYNX with ['minconf'] confirmations in the account's balance (unless account is the empty-string-named default account; it behaves like the *sendtoaddress* method). Returns transaction ID on success.
 .TP
 \fBsendtoaddress 'syndicateaddress' 'amount' ['comment'] ['comment-to']\fR
 Sends amount from the server's available balance to 'syndicateaddress'. amount is a real and is rounded to the nearest 0.01. Returns transaction id on success.
@@ -178,7 +178,7 @@ Sends amount from the server's available balance to 'syndicateaddress'. amount i
 Stops the syndicate server.
 .TP
 \fBvalidateaddress 'syndicateaddress'\fR
-Checks that 'syndicateaddress' looks like a proper PIVX address. Returns an object containing:
+Checks that 'syndicateaddress' looks like a proper Syndicate address. Returns an object containing:
 
     "isvalid" : true or false.
     "ismine"  : true if the address is in the server's wallet.
